fix: wordWrap fixed

--- a/src/common/modal/actionModal.module.css
+++ b/src/common/modal/actionModal.module.css
@@ -80,6 +80,7 @@
 }
 .deleteName {
     font-weight: bold;
+    word-wrap: break-word;
 }
 
 .selectQuestion {
